--- a/mqtt-notify.service
+++ b/mqtt-notify.service
@@ -5,6 +5,7 @@ Wants=network-online.target nss-lookup.target
 
 [Service]
 Type=simple
+Environment=PYTHONUNBUFFERED=1
 ExecStart=%h/bin/mqtt-notify.py -c %E/%p/config
 
 [Install]
